<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/afi_movies" />

<TextView
        android:id="@+id/filmOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/filmTitleOne"
        android:onClick ="onClickmyTextView"
        android:clickable="true" />

<TextView
        android:id="@+id/filmTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmOne"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/filmTitleTwo"
        android:onClick ="onClickmyTextView"
        android:clickable="true" />

<TextView
        android:id="@+id/filmThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/filmTitleThree"
        android:onClick ="onClickmyTextView"
        android:clickable="true" />

<TextView
        android:id="@+id/filmFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmThree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/filmTitleFour"
        android:onClick ="onClickmyTextView"
        android:clickable="true" />

<TextView
        android:id="@+id/filmFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmFour"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/filmTitleFive"
        android:onClick ="onClickmyTextView"
        android:clickable="true" />

   <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="28dp"
         android:text="@string/selectRandomFilm" />

</RelativeLayout>
